Fixing position of password visibility button

--- a/web/components/ui/PasswordContainer/PasswordContainer.module.css
+++ b/web/components/ui/PasswordContainer/PasswordContainer.module.css
@@ -16,7 +16,7 @@
   border-bottom: 0;
   border-bottom: 0;
   position: absolute;
-  top: 24px;
+  top: 32px;
   right: 0px;
   height: 40px;
   background-color: transparent;
