--- a/web/styles/Auth.module.css
+++ b/web/styles/Auth.module.css
@@ -158,7 +158,6 @@
 .auth__label {
   font-size: 1rem;
   line-height: 1.5rem;
-  margin-bottom: 8px;
 }
 
 .auth__bold {
@@ -168,6 +167,7 @@
 .auth__input {
   width: 100%;
   box-sizing: border-box;
+  margin-top: 8px;
   height: 40px;
   padding: 0.5rem 0.75rem;
   border: 1px solid rgb(203, 213, 225);
